--- a/css/page-style.css
+++ b/css/page-style.css
@@ -5,3 +5,11 @@ img{
     margin-left: auto;
     margin-right: auto;
 }
+
+button{
+    background-color: bisque;
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+
+}
