Change background color

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -2,6 +2,10 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+* {
+    background-color: linen;
+}
+
 img{
     height: 500px;
     width: auto;
