--- a/css/index-style.css
+++ b/css/index-style.css
@@ -6,15 +6,22 @@
     background-color: linen;
 }
 
-img{
+.head {
+    text-align: center;
+    font-weight: bold;
+}
+
+button {
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    background-color: bisque;
+}
+
+img {
     height: 500px;
     width: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-.head{
-    text-align: center;
-    font-weight: bold;
 }
