Match button style to index

--- a/css/page-style.css
+++ b/css/page-style.css
@@ -19,7 +19,14 @@ button{
     color: black;
     font-size: 16px;
     font-weight: bold;
+    float: left;
+    transition-duration: 0.4s;
+}
 
+button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: rgb(244, 189, 122);
+    color: rgb(0,0,0);
 }
 
 .head{
